[package]
name = "apijson"
version = "0.1.0"
edition = "2021"
authors = ["EchoLi <tgxz2000@gmail.com>"]
description = "APIJSON for Rust"
license = "Apache-2.0"
repository = "https://github.com/EchoRust/apijson"
keywords = ["APIJSON"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
